# piecrust

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  gen_ids.sh  rust-toolchain  rust-toolchain.toml
contracts/: Cargo.toml  README.md
contracts/badreturn/: Cargo.toml
contracts/badreturn/src/: lib.rs
contracts/box/: Cargo.toml
contracts/box/src/: lib.rs
contracts/c-example/: Cargo.toml  build.sh  contract.c
contracts/c-example/src/: lib.rs
contracts/callcenter/: Cargo.toml
contracts/callcenter/src/: lib.rs
contracts/callstack/: Cargo.toml
contracts/callstack/src/: lib.rs
contracts/constructor/: Cargo.toml
contracts/constructor/src/: lib.rs
contracts/counter/: Cargo.toml
contracts/counter/src/: lib.rs
contracts/counter_deployer/: Cargo.toml
contracts/counter_deployer/src/: lib.rs
contracts/counter_deployer_template/: Cargo.toml
contracts/counter_deployer_template/src/: lib.rs
contracts/counter_float/: Cargo.toml
contracts/counter_float/src/: lib.rs
contracts/crossover/: Cargo.toml
contracts/crossover/src/: lib.rs
contracts/debugger/: Cargo.toml
contracts/debugger/src/: lib.rs
contracts/double_counter/: Cargo.toml
contracts/double_counter/src/: lib.rs
contracts/empty_constructor/: Cargo.toml
contracts/empty_constructor/src/: lib.rs
contracts/empty_initializer/: Cargo.toml
contracts/empty_initializer/src/: lib.rs
contracts/event_reverter/: Cargo.toml
contracts/event_reverter/src/: lib.rs
contracts/eventer/: Cargo.toml
contracts/eventer/src/: lib.rs
contracts/everest/: Cargo.toml
contracts/everest/src/: lib.rs
contracts/fallible_counter/: Cargo.toml
contracts/fallible_counter/src/: lib.rs
contracts/feeder/: Cargo.toml
contracts/feeder/src/: lib.rs
contracts/fibonacci/: Cargo.toml
contracts/fibonacci/src/: lib.rs
contracts/grower/: Cargo.toml
contracts/grower/src/: lib.rs
contracts/host/: Cargo.toml
contracts/host/src/: lib.rs
contracts/initializer/: Cargo.toml
contracts/initializer/src/: lib.rs
contracts/invalid/: Cargo.toml
contracts/invalid/src/: lib.rs
contracts/merkle/: Cargo.toml
contracts/merkle/src/: lib.rs
contracts/metadata/: Cargo.toml
contracts/metadata/src/: lib.rs
contracts/micro/: Cargo.toml
contracts/micro/src/: lib.rs
contracts/spender/: Cargo.toml
contracts/spender/src/: lib.rs
contracts/stack/: Cargo.toml
contracts/stack/src/: lib.rs
contracts/vector/: Cargo.toml
contracts/vector/src/: lib.rs
crumbles/: CHANGELOG.md  Cargo.toml  Makefile  README.md
crumbles/src/: lib.rs
hatchery/: Cargo.toml
hatchery/src/: env.rs  error.rs  hash.rs  instance.rs  lib.rs  memory.rs  session.rs  snapshot.rs  snapshot_bag.rs  storage_helpers.rs  world.rs  world_snapshot.rs
hatchery/src/snapshot/: diff_data.rs  mod.rs  module_snapshot.rs  module_snapshot_bag.rs
hatchery/src/world/: event.rs  native.rs  stack.rs  store.rs
hatchery/tests/: boxen.rs  callcenter.rs  counter.rs  debug.rs  events.rs  fibonacci.rs  height.rs  host.rs  points.rs  self_snapshot.rs  snapshot.rs  stacked.rs  vector.rs
modules/counter/: Cargo.toml  Makefile  id
modules/counter/src/: lib.rs
modules/fibonacci/: Cargo.toml
modules/fibonacci/src/: lib.rs
modules/self_snapshot/: Cargo.toml
modules/self_snapshot/src/: lib.rs
modules/stack/: Cargo.toml  Makefile  id
modules/stack/src/: lib.rs
modules/vector/: Cargo.toml  id
modules/vector/src/: lib.rs
piecrust/: CHANGELOG.md  Cargo.toml  Makefile  README.md
piecrust-uplink/: CHANGELOG.md  Cargo.toml  Makefile  README.md
piecrust-uplink/src/: abi.rs  allocator.rs  debug.rs  error.rs  gen_contract_id.rs  handlers.rs  hash.rs  helpers.rs  lib.rs  serde_support.rs  snap.rs  state.rs  types.rs
piecrust-uplink/src/abi/: debug.rs  handlers.rs  helpers.rs  state.rs
piecrust-uplink/tests/: event.json  serde.rs
piecrust/benches/: stack.rs
piecrust/examples/: check_contract_positions.rs  contract-position-audit-report.md
piecrust/src/: bytecode_macro.rs  call_tree.rs  commit.rs  config.rs  contract.rs  error.rs  event.rs  imports.rs  instance.rs  instance_factory.rs  lib.rs  linear.rs  memory_handler.rs  memory_path.rs  merkle.rs  module.rs  persistable.rs  session.rs  session_env.rs  store.rs  storeroom.rs  types.rs  util.rs  vm.rs  wasm_init.rs
piecrust/src/commit/: commit_path.rs  diff_data.rs  mod.rs  module_commit.rs  module_commit_bag.rs  module_commit_object.rs  module_commit_store.rs
piecrust/src/contract/: contract_instance.rs
piecrust/src/imports/: wasm32.rs  wasm64.rs
piecrust/src/session/: call_stack.rs
piecrust/src/store/: baseinfo.rs  bytecode.rs  commit.rs  commit_db.rs  commit_finalizer.rs  commit_hulk.rs  commit_reader.rs  commit_remover.rs  commit_store.rs  commit_writer.rs  dedup.rs  diff.rs  hasher.rs  index.rs  memory.rs  metadata.rs  mmap.rs  module.rs  module_session.rs  objectcode.rs  session.rs  tree.rs  treepos.rs
piecrust/tests/: bounds.rs  box.rs  call_hook.rs  callcenter.rs  commit.rs  constructor.rs  counter.rs  counter_float.rs  crossover.rs  debug.rs  debugger.rs  deploy.rs  deploy_with_id.rs  deserialization.rs  event_reverter.rs  eventer.rs  events.rs  everest.rs  fallible.rs  fallible_counter.rs  feeder.rs  fibonacci.rs  growth.rs  height.rs  host.rs  initializer.rs  merkle.rs  metadata.rs  module.rs  persistence.rs  points.rs  root.rs  self_snapshot.rs  session.rs  session_commit.rs  spender.rs  stack.rs  stacked.rs  validation.rs  vector.rs
piecrust/tests/cold-reboot/: Cargo.toml
uplink/: Cargo.toml
uplink/src/: handlers.rs  helpers.rs  lib.rs  state.rs  types.rs
vmx/: Cargo.toml
vmx/benches/: stack.rs
vmx/src/: .#error.rs  bytecode_macro.rs  commit.rs  error.rs  event.rs  imports.rs  instance.rs  lib.rs  linear.rs  memory_handler.rs  memory_path.rs  module.rs  query_session.rs  session.rs  store.rs  types.rs  util.rs  vm.rs
vmx/tests/: box.rs  callcenter.rs  counter.rs  debug.rs  events.rs  fibonacci.rs  height.rs  host.rs  micro.rs  misc.rs  ops.rs  persistence.rs  points.rs  self_snapshot.rs  session_commit.rs  stacked.rs  vector.rs
(+86 files in other folders)
