[workspace]
members = [
    "box",
    "c-example",
    "callcenter",
    "callstack",
    "initializer",
    "counter",
    "counter_float",
    "debugger",
    "double_counter",
    "empty_initializer",
    "eventer",
    "everest",
    "fallible_counter",
    "feeder",
    "fibonacci",
    "grower",
    "host",
    "invalid",
    "merkle",
    "metadata",
    "micro",
    "crossover",
    "spender",
    "stack",
    "vector",
]
resolver = "2"
