[workspace]
members = [
    "badreturn",
    "box",
    "callcenter",
    "callstack",
    "initializer",
    "counter",
    "counter_float",
    "debugger",
    "double_counter",
    "empty_initializer",
    "event_reverter",
    "eventer",
    "everest",
    "fallible_counter",
    "feeder",
    "fibonacci",
    "grower",
    "host",
    "invalid",
    "merkle",
    "metadata",
    "micro",
    "crossover",
    "spender",
    "stack",
    "vector",
]
resolver = "2"

[workspace.package]
edition = "2024"
