[package]
name = "crumbles"
description = """
Keeping track of your pie's crumbles
"""
categories = ["data-structures", "memory-management"]
keywords = ["memory", "snapshots", "page", "dirty"]

repository = "https://github.com/dusk-network/piecrust"
version = "0.3.1"

edition = "2021"
license = "MPL-2.0"

[dependencies]
libc = "0.2"
rangemap = "1"

[dev-dependencies]
blake3 = "1"
hex = "0.4"
rand = "0.8"
