[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"

[dependencies]
colored = "2.0.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
wasmer = { git = "https://github.com/dusk-network/dusk-wasmer", tag = "2.3.0-dusk" }
wasmer-vm = { git = "https://github.com/dusk-network/dusk-wasmer", tag = "2.3.0-dusk" }
wasmer-middlewares = { git = "https://github.com/dusk-network/dusk-wasmer", tag = "2.3.0-dusk" }
wasmer-compiler-singlepass = { git = "https://github.com/dusk-network/dusk-wasmer", tag = "2.3.0-dusk" }
dallo = { path = "../dallo" }
blake3 = "1.3.1"
parking_lot = "0.12.1"
tempfile = "3.2.0"
qbsdiff = "1.4"
zstd = "0.9"
rand = "0.8.5"
