[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"

[dependencies]
colored = "2.0.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
wasmer = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
wasmer-vm = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
wasmer-types = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
wasmer-compiler-singlepass = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
dallo = { path = "../dallo" }
blake3 = "1.3.1"
parking_lot = "0.12.1"
tempfile = "3.2.0"
memmap2 = "0.5"
hex = "0.4"
