[package]
name = "piecrust-uplink"
description = """
Build smart contracts directly on top of Dusk's `piecrust` virtual machine.\
"""
categories = ["wasm", "no-std", "cryptography::cryptocurrencies"]
keywords = ["virtual", "machine", "smart", "contract", "wasm"]

repository = "https://github.com/dusk-network/piecrust"
version = "0.15.0"

edition = "2021"
license = "MPL-2.0"

[dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32", "alloc", "validation"] }
bytecheck = { version = "0.6", default-features = false }
dlmalloc = { version = "0.2", optional = true, features = ["global"] }
blake2b_simd = { version = "1", default-features = false }

[features]
abi = []
debug = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
hex = "0.4"
rand = "0.8"
