[package]
name = "piecrust"
description = """
Dusk's virtual machine for running WASM smart contracts.\
"""
categories = ["wasm", "no-std", "cryptography::cryptocurrencies"]
keywords = ["virtual", "machine", "smart", "contract", "wasm"]

repository = "https://github.com/dusk-network/piecrust"
version = "0.9.2"

edition = "2021"
license = "MPL-2.0"

[dependencies]
crumbles = { version = "0.1", path = "../crumbles" }
piecrust-uplink = { version = "0.7", path = "../piecrust-uplink" }

wasmer = "=3.1"
wasmer-vm = "=3.1"
wasmer-types = "=3.1"
wasmer-middlewares = "=3.1"
wasmer-compiler-singlepass = "=3.1"
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["size_32", "validation"] }
parking_lot = "0.12"
blake3 = "1"
colored = "2"
memmap2 = "0.7"
tempfile = "3"
thiserror = "1"
rand = "0.8"
hex = "0.4"
dusk-merkle = { version = "0.1", features = ["rkyv-impl"] }
const-decoder = "0.3"

[dev-dependencies]
criterion = "0.4"
dusk-plonk = { version = "0.14", features = ["rkyv-impl"] }
once_cell = "1.18"

[features]
debug = []

[[test]]
name = "callcenter"
path = "tests/callcenter.rs"
required-features = ["debug"]

[[test]]
name = "crossover"
path = "tests/crossover.rs"
required-features = ["debug"]

[[test]]
name = "debugger"
path = "tests/debugger.rs"
required-features = ["debug"]

[[test]]
name = "merkle"
path = "tests/merkle.rs"
required-features = ["debug"]

[[test]]
name = "spender"
path = "tests/spender.rs"
required-features = ["debug"]

[[bench]]
name = "stack"
harness = false
