[package]
name = "piecrust"
description = """
Dusk's virtual machine for running WASM smart contracts.\
"""
categories = ["wasm", "no-std", "cryptography::cryptocurrencies"]
keywords = ["virtual", "machine", "smart", "contract", "wasm"]

repository = "https://github.com/dusk-network/piecrust"
version = "0.32.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crumbles = { version = "0.4.0", path = "../crumbles" }
piecrust-uplink = { version = "0.21.0", path = "../piecrust-uplink" }

dusk-wasmtime = { version = "21.0.0-alpha", default-features = false, features = [
    "cranelift",
    "runtime",
    "parallel-compilation",
    "gc",
] }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["size_32", "validation"] }
blake3 = "1"
memmap2 = "0.7"
tempfile = "3"
thiserror = "1"
hex = "0.4"
dusk-merkle = { version = "0.5", features = ["rkyv-impl"] }
tracing = "0.1.40"
indexmap = "=2.11" # 2.12 requires rustc edition 2024

[dev-dependencies]
criterion = "0.4"
dusk-plonk = { version = "0.22.0-rc.0", features = ["rkyv-impl"] }
rand = "0.8"

[features]
debug = []
call-hook = []

[[test]]
name = "callcenter"
path = "tests/callcenter.rs"
required-features = ["debug"]

[[test]]
name = "crossover"
path = "tests/crossover.rs"
required-features = ["debug"]

[[test]]
name = "commit"
path = "tests/commit.rs"
required-features = ["debug"]

[[test]]
name = "debugger"
path = "tests/debugger.rs"
required-features = ["debug"]

[[test]]
name = "merkle"
path = "tests/merkle.rs"
required-features = ["debug"]

[[test]]
name = "spender"
path = "tests/spender.rs"
required-features = ["debug"]

[[test]]
name = "initializer"
path = "tests/initializer.rs"
required-features = ["debug"]

[[test]]
name = "validation"
path = "tests/validation.rs"
required-features = ["debug"]

[[test]]
name = "deserialization"
path = "tests/deserialization.rs"
required-features = ["debug"]

[[test]]
name = "event_reverter"
path = "tests/event_reverter.rs"
required-features = ["debug"]

[[test]]
name = "call_hook"
path = "tests/call_hook.rs"
required-features = ["call-hook", "debug"]

[[bench]]
name = "stack"
harness = false
