[package]
name = "uplink"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"

[dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32", "alloc"] }
bytecheck = { version = "0.6", default-features = false }
wee_alloc = "0.4.5"

[features]
default = ["std"]
std = []
