[package]
name = "vmx"
version = "0.1.0"
edition = "2021"

[dependencies]
uplink = { path = "../uplink" }

#wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
#wasmer-vm = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
#wasmer-types = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
#wasmer-compiler-singlepass = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer = { path = "../../../rust/wasmer/lib/api" }
wasmer-vm = { path = "../../../rust/wasmer/lib/vm" }
wasmer-types = { path = "../../../rust/wasmer/lib/types" }
wasmer-compiler-singlepass = { path = "../../../rust/wasmer/lib/compiler-singlepass" }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["size_32", "validation"] }
parking_lot = "0.12.1"
blake3 = "1.3.1"
colored = "2.0.0"
wasmparser = "0.90.0"
libc = { version = "^0.2", default-features = false }
region = { version = "3.0" }
tempfile = "3.2.0"
