[package]
name = "vmx"
version = "0.1.0"
edition = "2021"

[dependencies]
uplink = { path = "../uplink" }

wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166944d7783c26ea5e056a5f11fa59af358" }
wasmer-vm = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166944d7783c26ea5e056a5f11fa59af358" }
wasmer-types = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166944d7783c26ea5e056a5f11fa59af358" }
wasmer-compiler-singlepass = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166944d7783c26ea5e056a5f11fa59af358" }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["size_32", "validation"] }
parking_lot = "0.12.1"
blake3 = "1.3.1"
colored = "2.0.0"
wasmparser = "0.90.0"
libc = { version = "^0.2", default-features = false }
region = { version = "3.0" }
tempfile = "3.2.0"
