[package]
name = "vmx"
version = "0.1.0"
edition = "2021"

[dependencies]
uplink = { path = "../uplink" }

wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166" }
wasmer-vm = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166" }
wasmer-types = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166" }
wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166" }
wasmer-compiler-singlepass = { git = "https://github.com/wasmerio/wasmer", rev = "b501c166" }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["size_32", "validation"] }
parking_lot = "0.12.1"
blake3 = "1.3.1"
colored = "2.0.0"
libc = { version = "^0.2", default-features = false }
region = { version = "3.0" }
tempfile = "3.2.0"
