[package]
name = "counter_deployer"
version = "0.1.0"
authors = [
    "Demilade Sonuga <demilade@dusk.network>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "dlmalloc", "debug"] }
counter_deployer_template = { path = "../counter_deployer_template" }
