[package]
name = "crossover"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "dlmalloc"] }
