[package]
name = "debugger"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
]
edition.workspace = true

license = "MPL-2.0"

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "debug", "dlmalloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
