[package]
name = "everest"
version = "0.1.0"
authors = [
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
piecrust-macros = { path = "../../piecrust-macros" }
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "dlmalloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
