[package]
name = "fallible_counter"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
piecrust-macros = { path = "../../piecrust-macros" }
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "dlmalloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
