[package]
name = "merkle"
version = "0.1.0"
authors = [
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", features = ["abi", "dlmalloc"] }
dusk-merkle = { version = "0.1", features = ["rkyv-impl"] }
blake3 = { version = "=1.8.2", default-features = false }
constant_time_eq = "=0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]
