[package]
name = "counter"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
]
edition = "2021"

[dependencies]
dallo = { path = "../../dallo", default-features = false }
rkyv = { version = "0.7.38", default-features = false, features = ["size_32", "rend"] }

[profile.dev]
panic = "abort"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]
