[package]
name = "fibonacci"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", default-features = false, features = ["dlmalloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
