[package]
name = "self_snapshot"
version = "0.1.0"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Miłosz Muszyński <milosz@dusk.network>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dallo = { path = "../../dallo", default-features = false }

[workspace]
