[package]
name = "stack"
version = "0.1.0"
authors = [
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
dallo = { path = "../../dallo", default-features = false }
nstack = { git = "https://github.com/dusk-network/nstack", tag = "v0.0.0-hatchery" }
ranno = { git = "https://github.com/dusk-network/ranno", tag = "v0.0.0-hatchery", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
