[package]
name = "stack"
version = "0.1.0"
authors = [
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
]
edition = "2021"

license = "MPL-2.0"

[dependencies]
piecrust-uplink = { path = "../../piecrust-uplink", default-features = false, features = ["wee_alloc"] }
nstack = "0.16.0-rc"
ranno = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
